--- a/index.html
+++ b/index.html
@@ -316,7 +316,6 @@
               <h1>Lost Child Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p>
 
-<form class="form-signin" method="post" action="home.html">
 <br>
         <h2 class="lead"><b>Sign in below:</b></h2>
         <input type="text" name="myusername" class="input-block-level" placeholder="Username">
@@ -324,8 +323,8 @@
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> <font color="black">Remember me</font>
         </label>
-        <button class="btn btn-large btn-primary" type="submit">Sign in</button>
-      </form>
+<a href="home.html">        <button class="btn btn-large btn-primary" type="submit">Sign in</button></a>
+
 
 </div>
           </div>
