--- a/new_child.html
+++ b/new_child.html
@@ -1,7 +1,29 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+ <script src="js/jquery-1.10.2.js"></script>
+        <script src="js/jquery-ui-1.10.4.custom.js"></script>
+        <script>
+
+        $(function() {
+                $( "#datepicker,#datepicker2" ).datepicker({
+                        inline: true
+                });
+
+                // Hover states on the static widgets
+                $( "#dialog-link, #icons li" ).hover(
+                        function() {
+                                $( this ).addClass( "ui-state-hover" );
+                        },
+                        function() {
+                                $( this ).removeClass( "ui-state-hover" );
+                        }
+                );
+        });
+        </script>
+
+
+<head>
     <meta charset="utf-8">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +31,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <link href="css/ui-lightness/jquery-ui-1.10.4.custom.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <style>
@@ -326,23 +349,36 @@
       
       <div class="page-header">
 
-<span>
+<form class="form-signup2" method="post" action="insert.php">
+<br>
 
-<div class="btn-group">
+        <h2 class="lead"><b>Enter information about missing child below:</b></h2>
+<table cellpadding="5">
+<tr>
+
+</td></tr><tr> <td>       <h4>First Name: </td><td><input type="text" name="first_name" class="span-2" placeholder="First name"></h4>
+</td></tr><tr><td>      <h4>Last Name:  </td><td><input type="text" name="last_name" class="span-2"  placeholder="Last name"></h4>
+</td></tr><tr><td>      <h4>Height: </td><td><input type="text" name="myusername" class="span-2" placeholder="Username"></h4>
+</td></tr><tr><td>      <h4>Gender: </td><td><input type="password" id="mypassword" name="mypassword" class="span-2"  placeholder="gender"></h4>
+</td></tr>
+
+<tr><td>      <h4>Upload Picture: </td><td><input type="file" id="picture" name="file"></h4>
+</td></tr>
 
 
-<a href="new_child.html">  <button type="submit" class="btn btn-success">Add New Child</button></a>
-
-</div></span>	
 
 
+<tr><td>
+<h4> Birth Date </td><td><input type="text" name="year_birth" id="datepicker" />
 
+</h4></td></tr>
+<tr><td>
+<h4> Date Missing </td><td><input type="text" name="year_missing" id="datepicker2" /></h4></td></tr>
+</table>
+        <button class="btn btn-large btn-primary" Value="submit" id="submit" type="submit">Submit</button>
+      </form>
 
-    </div>
-
-  <div class="clear"></div>
-
-<hr />
+</div>
  
 
       <!-- FOOTER -->
@@ -380,5 +416,6 @@
       }(window.jQuery)
     </script>
     <script src="../assets/js/holder/holder.js"></script>
-  </body>
+
+</body>
 </html>
