--- a/new_child.html
+++ b/new_child.html
@@ -315,7 +315,7 @@
           <li class="active"><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-		<li><a href="points.php">My Children</a></li>
+		<li><a href="children.html">My Children</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
                
               </ul>
@@ -384,7 +384,6 @@
       <!-- FOOTER -->
       <footer>
 
-        <p>&copy; 2013 University of Maryland, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
