--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
         <label class="checkbox">
           <input type="checkbox" value="remember-me"> <font color="black">Remember me</font>
         </label>
-<a href="home.html">        <button class="btn btn-large btn-primary" type="submit">Sign in</button></a>
+<a href="new_child.html">        <button class="btn btn-large btn-primary" type="submit">Sign in</button></a>
 
 
 </div>
