--- a/new_child.html
+++ b/new_child.html
@@ -359,7 +359,11 @@
 </td></tr><tr> <td>       <h4>First Name: </td><td><input type="text" name="first_name" class="span-2" placeholder="First name"></h4>
 </td></tr><tr><td>      <h4>Last Name:  </td><td><input type="text" name="last_name" class="span-2"  placeholder="Last name"></h4>
 </td></tr><tr><td>      <h4>Height: </td><td><input type="text" name="myusername" class="span-2" placeholder="Username"></h4>
-</td></tr><tr><td>      <h4>Gender: </td><td><input type="password" id="mypassword" name="mypassword" class="span-2"  placeholder="gender"></h4>
+</td></tr><tr><td>      <h4>Gender: </td><td>
+<input type="password" id="mypassword" name="mypassword" class="span-2"  placeholder="gender">
+<input type="radio" name="gender" value="Female"> Female   
+<input type="radio" name="gender" value="Male" checked> Male<br>
+</h4>
 </td></tr>
 
 <tr><td>      <h4>Upload Picture: </td><td><input type="file" id="picture" name="file"></h4>
