--- a/new_child.html
+++ b/new_child.html
@@ -366,7 +366,7 @@
 </h4>
 </td></tr>
 
-<tr><td>      <h4>Upload Picture: </td><td><input type="file" id="picture" name="file"></h4>
+<tr><td>      <h4>Upload Picture: </td><td><input type="file" id="picture" name="file" multiple accept='image/*'></h4>
 </td></tr>
 
 
