--- a/new_child.html
+++ b/new_child.html
@@ -313,7 +313,7 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
           <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#contact">Contact</a></li>
 		<li><a href="children.html">My Children</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
