--- a/new_child.html
+++ b/new_child.html
@@ -308,12 +308,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#">Orphan Locator</a>
+            <a class="brand" href="index.html">Orphan Locator</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-                <li><a href="about.html">About</a></li>
+          <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
 		<li><a href="children.html">My Children</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
