--- a/new_child.html
+++ b/new_child.html
@@ -349,7 +349,7 @@
       
       <div class="page-header">
 
-<form class="form-signup2" method="post" action="insert.php">
+<form class="form-signup2" method="post" action="formoutput.php">
 <br>
 
         <h2 class="lead"><b>Enter information about missing child below:</b></h2>
@@ -358,7 +358,7 @@
 
 </td></tr><tr> <td>       <h4>First Name: </td><td><input type="text" name="first_name" class="span-2" placeholder="First name"></h4>
 </td></tr><tr><td>      <h4>Last Name:  </td><td><input type="text" name="last_name" class="span-2"  placeholder="Last name"></h4>
-</td></tr><tr><td>      <h4>Height: </td><td><input type="text" name="myusername" class="span-2" placeholder="Username"></h4>
+</td></tr><tr><td>      <h4>Height: </td><td><input type="text" name="myusername" class="span-2" placeholder="Height"></h4>
 </td></tr><tr><td>      <h4>Gender: </td><td>
 
 <input type="radio" name="gender" value="Female"> Female   
@@ -368,9 +368,6 @@
 
 <tr><td>      <h4>Upload Picture: </td><td><input type="file" id="picture" name="file" multiple accept='image/*'></h4>
 </td></tr>
-
-
-
 
 <tr><td>
 <h4> Birth Date </td><td><input type="text" name="year_birth" id="datepicker" />
