--- a/carousel.html
+++ b/carousel.html
@@ -325,7 +325,7 @@
               <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p> 
 
-              <a class="btn btn-large btn-primary" href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Sign in</a>
+              <a class="btn btn-large btn-primary" href="home.html">Sign in</a>
             </div>
           </div>
         </div>
@@ -336,7 +336,7 @@
                <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p>
 
-              <a class="btn btn-large btn-primary" href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Sign in</a>
+              <a class="btn btn-large btn-primary" href="home.html">Sign in</a>
             </div>
           </div>
         </div>
@@ -346,7 +346,7 @@
             <div class="carousel-caption">
   <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p>
-
+       <a class="btn btn-large btn-primary" href="home.html">Sign in</a>
             </div>
           </div>
         </div>
