--- a/index.html
+++ b/index.html
@@ -284,26 +284,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Project name</a>
+            <a class="brand" href="index.html">Orphan Locator</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Home</a></li>
-                <li><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#about">About</a></li>
-                <li><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#contact">Contact</a></li>
-                <!-- Read about Bootstrap dropdowns at http://twbs.github.com/bootstrap/javascript.html#dropdowns -->
-                <li class="dropdown">
-                  <a href="http://getbootstrap.com/2.3.2/examples/carousel.html#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Action</a></li>
-                    <li><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Another action</a></li>
-                    <li><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="nav-header">Nav header</li>
-                    <li><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Separated link</a></li>
-                    <li><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">One more separated link</a></li>
-                  </ul>
-                </li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+               
               </ul>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
