--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p> 
 
-              <a class="btn btn-large btn-primary" href="home.html">Sign in</a>
+              <a class="btn btn-large btn-primary" href="new_child.html">Sign in</a>
             </div>
           </div>
         </div>
@@ -323,7 +323,7 @@
                <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p>
 
-              <a class="btn btn-large btn-primary" href="home.html">Sign in</a>
+              <a class="btn btn-large btn-primary" href="new_child.html">Sign in</a>
             </div>
           </div>
         </div>
@@ -333,7 +333,7 @@
             <div class="carousel-caption">
   <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p>
-       <a class="btn btn-large btn-primary" href="home.html">Sign in</a>
+       <a class="btn btn-large btn-primary" href="new_child.html">Sign in</a>
             </div>
           </div>
         </div>
