--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
 
       <!-- FOOTER -->
       <footer>
-        <p class="pull-right"><a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Back to top</a></p>
-        <p>© 2014 Built at International Hackathon for Social Good in the Arab World <a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Privacy</a> · <a href="http://getbootstrap.com/2.3.2/examples/carousel.html#">Terms</a></p>
+
+        <p>© 2014 Built at International Hackathon for Social Good in the Arab World </p>
       </footer>
 
     </div><!-- /.container -->
