--- a/contact.html
+++ b/contact.html
@@ -324,7 +324,8 @@
 
 <h2>Finder: John Bo.</h2>
 <p class="lead"> Contact 340-123-2340 or email bo_john@gmail.com</p>
-
+<h3>Date Discovered: </h3> 10/12/09
+<h3>Found Near: </h3> NYU Abu Dhabi 
  
 
 
