--- a/user_form.html
+++ b/user_form.html
@@ -345,7 +345,7 @@
       
       <div class="page-header">
 
-<form class="form-signup2" method="post" action="formoutput2.php">
+<form class="form-signup2" method="post" action="show_results.php">
 <br>
 
         <h2 class="lead"><b>Enter information about missing child below:</b></h2>
