--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
               <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p> 
 
-              <a class="btn btn-large btn-primary" href="user_form.html">Locate</a>
+              <a class="btn btn-large btn-primary" href="user_form.html">Sign in</a>
             </div>
           </div>
         </div>
