--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0052)http://getbootstrap.com/2.3.2/examples/carousel.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>ResearchIQ</title>
+    <title>Lost Child Locator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -284,9 +284,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="brand" href="index.html">ResearchIQ</a>
-
+            <a class="brand" href="index.html">Orphan Locator</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
@@ -310,33 +308,12 @@
         <div class="item active">
           <img src="syria1.jpg" alt="">
           <div class="container">
-<<<<<<< HEAD
- <div class="carousel-caption">
-
-              <h1>ResearchIQ</h1>
-              <p class="lead">ResearchIQ is a tool that tells you the impact of your research in the academic, social media, and traditional media spheres.</p>
-
-
-<form class="form-signin" method="post" action="home.html">
-<br>
-        <h2 class="lead"><b>Sign in below:</b></h2>
-        <input type="text" name="myusername" class="input-block-level" placeholder="Username">
-        <input type="password" name ="mypassword" class="input-block-level" placeholder="Password">
-        <label class="checkbox">
-          <input type="checkbox" value="remember-me"> <font color="black">Remember me</font>
-        </label>
-        <button class="btn btn-large btn-primary" type="submit">Sign in</button>
-      </form>
-
-</div>
-=======
             <div class="carousel-caption">
               <h1>Orphan Locator</h1>
               <p class="lead">Lost Child Locator is a match system using face recognition and other metadata to find matches between Orphanages/Refugee camps and Government/Police databases where parents report missing children. </p> 
 
               <a class="btn btn-large btn-primary" href="user_form.html">Sign in</a>
             </div>
->>>>>>> 623070c6c0f6f1da4b4b0d1e4ac8852900d695fb
           </div>
         </div>
         <div class="item">
